; ModuleID = '/home/carl/AnghaBench/FFmpeg/tests/api/extr_api-band-test.c_main.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tests/api/extr_api-band-test.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [115 x i8] c"Incorrect input: expected %s <name of a video file>\0ANote that test works only for huffyuv, flv and mpeg4 decoders\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 2
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i32, i32* @AV_LOG_ERROR, align 4
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @av_log(i32* null, i32 %9, i8* getelementptr inbounds ([115 x i8], [115 x i8]* @.str, i64 0, i64 0), i8* %12)
  store i32 1, i32* %3, align 4
  br label %22

14:                                               ; preds = %2
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 1
  %17 = load i8*, i8** %16, align 8
  %18 = call i64 @video_decode(i8* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %22

21:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %20, %8
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @av_log(i32*, i32, i8*, i8*) #1

declare dso_local i64 @video_decode(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
